--- a/public/index.html
+++ b/public/index.html
@@ -19,11 +19,12 @@
 </header>
 
 <main class="main">
-  <!-- Меню -->
+  <!-- Навигация -->
 
   <!-- Сортировка -->
 
   <!-- Контент -->
+  </div>
 </main>
 
 
